--- a/spring-migration/pom.xml
+++ b/spring-migration/pom.xml
@@ -46,12 +46,13 @@
 			<artifactId>querydsl-apt</artifactId>
 			<version>${querydsl.version}</version>
 			<scope>provided</scope>
+			<classifier>jakarta</classifier>
 		</dependency>
-
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
 			<version>${querydsl.version}</version>
+			<classifier>jakarta</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -84,6 +85,10 @@
 							<goal>process</goal>
 						</goals>
 						<configuration>
+							<includes>
+								<include>common.persistence.entity.**</include>
+								<include> package.entity.**</include>
+							</includes>
 							<outputDirectory>target/generated-sources/java</outputDirectory>
 							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
 						</configuration>
