--- a/spring-migration/src/main/resources/application.yml
+++ b/spring-migration/src/main/resources/application.yml
@@ -5,8 +5,6 @@ application:
 
 server:
   port: 8080
-  servlet:
-    context-path: '/api'
 
 spring:
   datasource:
@@ -17,4 +15,6 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
-
+    database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console.enabled: true
