--- a/spring-migration/src/main/resources/application.yml
+++ b/spring-migration/src/main/resources/application.yml
@@ -8,6 +8,7 @@ server:
 
 spring:
   datasource:
+    driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:mydb
     username: sa
     password: sa
